open java.scripting/javax.script (required by log4j-core)